--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places"></script>
-
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
 </head>
 
 <body>
